# bcdl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
benchmarks/: RESULTS.md  results.json
cmake/: FindHobot.cmake  bcdlConfig.cmake.in  version.h.in
data/: README.md  ppocr_keys_v1_6625.txt  ppocr_keys_v5_18385.txt  ppocr_keys_v6_18710.txt
docs/: API.md  CPP_API.md  GDC.md  MODELS.md  PLAN.md
docs/assets/: README.md
env/: environment.yml
examples/: async_bench.cc  async_check.cc  depth_demo.cc  det_demo.cc  det_infer.cc  embed_demo.cc  gdc_letterbox_bench.cc  jpeg_roundtrip.cc  mempool_demo.cc  ocr_demo.cc  opencv_check.cc  pipeline_bench.cc  rtsp_det_demo.py  stereo_demo.cc  track_demo.cc  tracks_ocr_check.cc  video_decode.cc  video_det_demo.cc  video_det_demo.py  video_det_demo_async.cc  video_roundtrip.cc  vp_probe.cc
include/bcdl/: bcdl.h
include/bcdl/backend/: engine.h  output_reader.h
include/bcdl/core/: mem_pool.h  status.h  sys_mem.h  task.h
include/bcdl/media/: jpeg_codec.h  video_codec.h
include/bcdl/pipeline/: async_detection_pipeline.h  async_video_detection_pipeline.h  detection_pipeline.h  stereo_pipeline.h  tracking_pipeline.h
include/bcdl/preproc/: gdc_letterbox.h  gdc_remap.h  geometry.h  letterbox.h  letterbox_cpu.h  vp_image.h
include/bcdl/tasks/: classification.h  depth.h  detection.h  embedding.h  face.h  features.h  instance_seg.h  mono3d.h  obb.h  ocr.h  open_vocab.h  panoptic_drive.h  pose.h  promptable_seg.h  segmentation.h  superres.h  wholebody.h
include/bcdl/tracks/: byte_tracker.h  reid.h
models/: README.md
python/: bcdl_py.pyi
python/bcdl/: __init__.py
scripts/: board_bench.py  board_build.sh  bootstrap_board.sh  build.sh  fetch_models.sh  local.env.example  sync.sh
src/backend/: engine.cc  output_reader.cc
src/core/: mem_pool.cc  status.cc  sys_mem.cc  task.cc
src/media/: jpeg_codec.cc  video_codec.cc
src/pipeline/: async_detection_pipeline.cc  async_video_detection_pipeline.cc  detection_pipeline.cc  stereo_pipeline.cc  tracking_pipeline.cc
src/preproc/: gdc_bin.cc  gdc_bin.h  gdc_letterbox.cc  gdc_remap.cc  letterbox.cc  letterbox_cpu.cc  vp_image.cc
src/python/: bcdl_py.cc
src/tasks/: classification.cc  depth.cc  detection.cc  embedding.cc  face.cc  features.cc  instance_seg.cc  mono3d.cc  obb.cc  ocr.cc  panoptic_drive.cc  pose.cc  promptable_seg.cc  segmentation.cc  superres.cc  wholebody.cc
src/tracks/: byte_tracker.cc  reid.cc
tests/: board_models.py  test_async_detection_py.py  test_board_models.py  test_classification.py  test_codec_py.py  test_depth_seg.py  test_depth_seg_py.py  test_detection.py  test_embedding.py  test_embedding_py.py  test_engine.py  test_engine_input_stride.py  test_face.py  test_features.py  test_gdc_remap.py  test_instance_seg.py  test_memory_safety.py  test_mono3d_py.py  test_obb.py  test_ocr.py  test_open_vocab.py  test_panoptic_drive.py  test_pose.py  test_promptable_seg.py  test_reid.py  test_stereo_board_py.py  test_stereo_py.py  test_superres.py  test_tracking_py.py  test_video_decode_py.py  test_wholebody.py
